# kiezen

./: .dockerignore  .gitignore  Dockerfile  Prisma Studio.run.xml  README.md  ROADMAP.md  compose.yaml  docker-compose.yaml  fr.truel.Kiezen.json  index.html  kiezen.db  main.ui  meson.build  nuxt.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  settings  subsonic.py  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.flatpak-builder/checksums/: x86_64-fr.truel.Kiezen.json
.run/: Prisma Studio.run.xml  Template JavaScript Debug.run.xml  fullstack_ nuxt.run.xml  nuxt.run.xml  prisma studio_ chrome.run.xml
app/: add_files.py  main.py
backend/: .gitignore  README.md  alembic.ini  pyproject.toml
backend/migrations/versions/: cf55a12edbde_add_duration_to_song.py
backend/src/: crud.py  database.py  main.py  models.py  routes.py  schemas.py  utils.py
backend/tests/: conftest.py  test_songs.py
components/: AddSongForm.vue  FileUpload.vue  FileUploadGrid.vue  InteractiveHoverButton.vue  Song.vue  Waveform.vue
composables/: customFetch.ts  states.ts
data/: fr.truel.Kiezen.desktop.in  fr.truel.Kiezen.gschema.xml  fr.truel.Kiezen.metainfo.xml.in  meson.build
data/icons/: meson.build
desktop/: README.md
docs/: tasks.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue  api.ts
frontend/src/assets/: main.css
frontend/src/components/: MusicPlayer.vue  PlaylistList.vue  SongList.vue  SongsManager.vue
frontend/src/composables/: useErrorHandler.ts
frontend/src/stores/: playerStore.ts  songStore.ts
kiezen/: subsonic.py
layouts/: default.vue
middleware/: auth.global.ts
mobile/: README.md
pages/: index.vue  library.vue  login.vue  page_two.vue  upload.vue
po/: POTFILES  meson.build
prisma/: schema.prisma
prisma/migrations/20250123213813_init/: migration.sql
server/api/: index.get.ts
server/api/v1/: uploadfile.post.ts
server/utils/: transcode.ts
shared/: README.md
src/: App.vue  controler.py  kiezen.gresource.xml  kiezen.in  main.blp  main.py  main.ts  meson.build  model.py  open_file.py  play_file_seg.py  play_file_wave.py  player.py  settings  view.py  window.blp  window.py  window.ui
src/components/: MusicPlayer.vue  SongItem.vue
web/: package.json
web/src/: App.vue  api.ts
web/src/assets/: base.css  main.css
web/src/components/: SongList.vue  (+5 more)
(+16 files in other folders)
